# vbase

./: Cargo.toml  Justfile  LICENSE  README.md  rustfmt.toml
crates/vbase/: Cargo.toml
crates/vbase-core/: Cargo.toml
crates/vbase-core/src/: core.rs  database.rs  engine.rs  error.rs  file.rs  journal.rs  lib.rs  manifest.rs  options.rs  pipeline.rs
crates/vbase-core/src/engine/: internal.rs  mod.rs
crates/vbase-engine/: Cargo.toml
crates/vbase-engine/src/: lib.rs
crates/vbase-env/: Cargo.toml
crates/vbase-env/src/: boxed.rs  lib.rs  local.rs  mock.rs  test.rs
crates/vbase-file/: Cargo.toml
crates/vbase-file/src/: error.rs  journal.rs  lib.rs
crates/vbase-tree/: Cargo.toml
crates/vbase-tree/src/: bucket.rs  data.rs  engine.rs  file.rs  lib.rs  manifest.rs  memtable.rs
crates/vbase-util/: Cargo.toml
crates/vbase-util/src/: alloc.rs  arc.rs  arena.rs  bytes.rs  cell.rs  codec.rs  crc32.rs  lib.rs  skip_list.rs  spmc_queue.rs
crates/vbase-util/src/codec/: decode.rs  encode.rs  mod.rs
crates/vbase/src/: database.rs  error.rs  lib.rs  manifest.rs  root.rs  test.rs
crates/vbase/src/collections/: mod.rs  tree.rs
crates/vbase/src/engine/: mod.rs  test.rs
