[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Huachao Huang <huachao.huang@gmail.com>"]
homepage = "https://github.com/huachaohuang/vbase"
repository = "https://github.com/huachaohuang/vbase"
description = "A multi-model embedded database"
rust-version = "1.91"

[workspace.lints.rust]
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
prost = "0.14.1"
thiserror = "2.0.17"
vbase-env = { path = "crates/vbase-env", version = "0.1.0" }
vbase-file = { path = "crates/vbase-file", version = "0.1.0" }
vbase-tree = { path = "crates/vbase-tree", version = "0.1.0" }
vbase-util = { path = "crates/vbase-util", version = "0.1.0" }
