[package]
name = "vbase-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test = ["vbase-env/test", "vbase-util/test", "vbase-core/test"]

[dependencies]
vbase-env.workspace = true
vbase-file.workspace = true
vbase-util.workspace = true
vbase-core.workspace = true
