[package]
name = "vbase-env"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]

[target."cfg(not(miri))".dependencies]
tempfile = "3.23.0"
