[package]
name = "vbase-env"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test = ["dep:tempfile"]

[dependencies]
tempfile = { version = "3.23.0", optional = true }
