[package]
name = "vbase-file"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
vbase-env.workspace = true
vbase-util.workspace = true

[dev-dependencies]
anyhow = "1.0.100"
