[package]
name = "vbase-util"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test = []
shuttle = ["dep:shuttle"]

[dependencies]
crc32fast = "1.5.0"
rand = "0.9.2"
shuttle = { version = "0.8.1", optional = true }
