[package]
name = "vbase"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log.workspace = true
prost.workspace = true
thiserror.workspace = true
vbase-env.workspace = true
vbase-file.workspace = true
vbase-tree.workspace = true
