[package]
name = "vbase"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
vbase-env.workspace = true
vbase-util.workspace = true
vbase-core.workspace = true

[dev-dependencies]
vbase-env = { workspace = true, features = ["test"] }
