[package]
name = "vbase"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
vbase-util.workspace = true
vbase-core.workspace = true
vbase-tree.workspace = true

[dev-dependencies]
vbase-core = { workspace = true, features = ["test"] }
